{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 135,
  "lineage": "bfa028f0-893d-a8bd-6c4d-ead75b9b5f66",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "RG1_pu_ipp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/publicIPAddresses/RG1-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.10.107",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "RG1-pubip",
            "resource_group_name": "RG1",
            "sku": "Basic",
            "tags": {
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "RG1_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/networkInterfaces/RG1_ni",
            "internal_domain_name_suffix": "ebw20dwvbyvezoncum0pbffpvg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "1.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/publicIPAddresses/RG1-pubip",
                "subnet_id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/virtualNetworks/RG1_network/subnets/RG1_subnet"
              }
            ],
            "location": "eastus",
            "name": "RG1_ni",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "RG1"
          },
          "dependencies": [
            "azurerm_public_ip.RG1_pubip",
            "azurerm_resource_group.RG1",
            "azurerm_subnet.RG1_subnet",
            "azurerm_virtual_network.RG1_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "RG1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/networkSecurityGroups/RG1-sg",
            "location": "eastus",
            "name": "RG1-sg",
            "resource_group_name": "RG1",
            "security_rule": [],
            "tags": {
              "env": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "RG1_sr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/networkSecurityGroups/RG1-sg/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "RG1-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "RG1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.RG1_sg",
            "azurerm_resource_group.RG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "RG1_pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/publicIPAddresses/RG1-pubip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.178.10.107",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "RG1-pubip",
            "resource_group_name": "RG1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "RG1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "1.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/virtualNetworks/RG1_network/subnets/RG1_subnet",
            "name": "RG1_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG1",
            "virtual_network_name": "RG1_network"
          },
          "dependencies": [
            "azurerm_resource_group.RG1",
            "azurerm_virtual_network.RG1_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "RG1_sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/virtualNetworks/RG1_network/subnets/RG1_subnet",
            "network_security_group_id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/networkSecurityGroups/RG1-sg",
            "subnet_id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/virtualNetworks/RG1_network/subnets/RG1_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.RG1_sg",
            "azurerm_resource_group.RG1",
            "azurerm_subnet.RG1_subnet",
            "azurerm_virtual_network.RG1_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "RG1_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0ecd6d20-0ed5-4c2a-b9a2-a334f094afae",
            "id": "/subscriptions/8d6c973a-cd58-469c-92bb-3fd4ee32d12a/resourceGroups/RG1/providers/Microsoft.Network/virtualNetworks/RG1_network",
            "location": "eastus",
            "name": "RG1_network",
            "resource_group_name": "RG1",
            "tags": {
              "env": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.RG1"
          ]
        }
      ]
    }
  ]
}